--- a/angular.json
+++ b/angular.json
@@ -27,6 +27,7 @@
                         "styles": [
                             "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
                             "src/styles.scss",
+                            "src/assets/styles/theme.scss",
                             "node_modules/material-design-iconic-font/dist/css/material-design-iconic-font.min.css"
                         ],
 
