--- a/package.json
+++ b/package.json
@@ -1,110 +1,113 @@
 {
-    "name": "shoppable",
-    "version": "0.0.0",
-    "scripts": {
-        "ng": "ng",
-        "start": "ng serve",
-        "clean:dist": "rimraf dist",
-        "build:prod": "node_modules/.bin/ng build --aot --prod",
-        "build": "npm run clean:dist && npm run build:prod",
-        "test": "jest",
-        "test:debug": "jest --runInBand --config ./jest.config.js",
-        "test:coverage": "jest --coverage --config ./jest.config.js",
-        "test:auth:lib": "jest --runInBand --config ./projects/authentication/jest.config.js",
-        "test:auth:coverage": "jest --coverage --config ./projects/authentication/jest.config.js",
-        "test:watch:lib": "jest --watch --config ./projects/authentication/jest.config.js",
-        "test:core:lib": "jest --runInBand --config ./projects/core/jest.config.js",
-        "test:core:coverage": "jest --coverage --config ./projects/core/jest.config.js",
-        "test:dashboard:lib": "jest --runInBand --config ./projects/dashboard/jest.config.js",
-        "test:dashboard:coverage": "jest --coverage --config ./projects/dashboard/jest.config.js",
-        "test:shared:lib": "jest --runInBand --config ./projects/shared/jest.config.js",
-        "test:shared:coverage": "jest --coverage --config ./projects/shared/jest.config.js",
-        "test:i18n:lib": "jest --runInBand --config ./projects/internationalization/jest.config.js",
-        "test:i18n:coverage": "jest --coverage --config ./projects/internationalization/jest.config.js",
-        "test:app": "jest --config ./jest.app.config.js",
-        "lint": "eslint '*/**/*.{js,ts,tsx}' --quiet --fix",
-        "e2e": "ng e2e",
-        "storybook": "start-storybook -p 6006",
-        "build-storybook": "build-storybook",
-        "sonar-scanner": "node_modules/.bin/sonar-scanner",
-        "sonar": "npm run sonar-scanner"
-    },
-    "private": true,
-    "dependencies": {
-        "@angular/animations": "~9.1.6",
-        "@angular/cdk": "^9.2.4",
-        "@angular/common": "~9.1.6",
-        "@angular/compiler": "~9.1.6",
-        "@angular/core": "~9.1.6",
-        "@angular/forms": "~9.1.6",
-        "@angular/localize": "~9.1.6",
-        "@angular/material": "^9.2.4",
-        "@angular/platform-browser": "~9.1.6",
-        "@angular/platform-browser-dynamic": "~9.1.6",
-        "@angular/router": "~9.1.6",
-        "@briebug/jest-schematic": "^2.1.1",
-        "@fortawesome/fontawesome-free": "^5.13.0",
-        "@ngrx/effects": "^9.1.2",
-        "@ngrx/router-store": "^9.1.2",
-        "@ngrx/store": "^9.1.2",
-        "@ngx-translate/core": "^12.1.2",
-        "@ngx-translate/http-loader": "^4.0.0",
-        "@storybook/addon-storyshots": "^5.3.18",
-        "angular-notifier": "^6.0.1",
-        "animate-sass": "^0.8.2",
-        "bootstrap": "^4.5.0",
-        "jasmine-marbles": "^0.6.0",
-        "jquery": "^3.5.1",
-        "jwt-decode": "^2.2.0",
-        "material-design-iconic-font": "^2.2.0",
-        "rxjs": "~6.5.4",
-        "sonarqube-scanner": "^2.6.0",
-        "tslib": "^1.10.0",
-        "zone.js": "~0.10.2"
-    },
-    "devDependencies": {
-        "@angular-devkit/build-angular": "^0.901.7",
-        "@angular-devkit/build-ng-packagr": "~0.901.6",
-        "@angular/cli": "~9.1.5",
-        "@angular/compiler-cli": "~9.1.6",
-        "@babel/core": "^7.9.6",
-        "@commitlint/cli": "^8.3.5",
-        "@commitlint/config-conventional": "^8.3.4",
-        "@ngrx/store-devtools": "^9.1.2",
-        "@storybook/addon-actions": "^5.3.18",
-        "@storybook/addon-links": "^5.3.18",
-        "@storybook/addon-notes": "^5.3.18",
-        "@storybook/addons": "^5.3.18",
-        "@storybook/angular": "^5.3.18",
-        "@types/jasmine": "~3.5.0",
-        "@types/jasminewd2": "~2.0.3",
-        "@types/jest": "^25.2.2",
-        "@types/node": "^12.11.1",
-        "@typescript-eslint/eslint-plugin": "^2.34.0",
-        "@typescript-eslint/parser": "^2.34.0",
-        "babel-loader": "^8.1.0",
-        "codelyzer": "^5.1.2",
-        "eslint": "^7.0.0",
-        "eslint-config-prettier": "^6.11.0",
-        "eslint-plugin-prettier": "^3.1.3",
-        "husky": "^4.2.5",
-        "jasmine-core": "~3.5.0",
-        "jasmine-spec-reporter": "~4.2.1",
-        "jest": "^24.9.0",
-        "jest-preset-angular": "^7.1.1",
-        "jest-sonar-reporter": "^2.0.0",
-        "lint-staged": "^10.2.4",
-        "ng-packagr": "^9.0.0",
-        "prettier": "^2.0.5",
-        "protractor": "~5.4.3",
-        "ts-jest": "^26.0.0",
-        "ts-node": "~8.3.0",
-        "tslint": "~6.1.0",
-        "typescript": "~3.8.3"
-    },
-    "jestSonar": {
-        "reportPath": "reports",
-        "reportFile": "test-reporter.xml",
-        "indent": 4
-    }
+  "name": "shoppable",
+  "version": "0.0.0",
+  "scripts": {
+    "ng": "ng",
+    "start": "ng serve",
+    "clean:dist": "rimraf dist",
+    "build:prod": "node_modules/.bin/ng build --aot --prod",
+    "build": "npm run clean:dist && npm run build:prod",
+    "test": "jest",
+    "test:debug": "jest --runInBand --config ./jest.config.js",
+    "test:coverage": "jest --coverage --config ./jest.config.js",
+    "test:auth:lib": "jest --runInBand --config ./projects/authentication/jest.config.js",
+    "test:auth:coverage": "jest --coverage --config ./projects/authentication/jest.config.js",
+    "test:watch:lib": "jest --watch --config ./projects/authentication/jest.config.js",
+    "test:core:lib": "jest --runInBand --config ./projects/core/jest.config.js",
+    "test:core:coverage": "jest --coverage --config ./projects/core/jest.config.js",
+    "test:dashboard:lib": "jest --runInBand --config ./projects/dashboard/jest.config.js",
+    "test:dashboard:coverage": "jest --coverage --config ./projects/dashboard/jest.config.js",
+    "test:shared:lib": "jest --runInBand --config ./projects/shared/jest.config.js",
+    "test:shared:coverage": "jest --coverage --config ./projects/shared/jest.config.js",
+    "test:i18n:lib": "jest --runInBand --config ./projects/internationalization/jest.config.js",
+    "test:i18n:coverage": "jest --coverage --config ./projects/internationalization/jest.config.js",
+    "test:app": "jest --config ./jest.app.config.js",
+    "lint": "eslint '*/**/*.{js,ts,tsx}' --quiet --fix",
+    "e2e": "ng e2e",
+    "storybook": "start-storybook -p 6006",
+    "build-storybook": "build-storybook",
+    "sonar-scanner": "node_modules/.bin/sonar-scanner",
+    "sonar": "npm run sonar-scanner"
+  },
+  "private": true,
+  "dependencies": {
+    "@angular/animations": "~9.1.6",
+    "@angular/cdk": "^9.2.4",
+    "@angular/common": "~9.1.6",
+    "@angular/compiler": "~9.1.6",
+    "@angular/core": "~9.1.6",
+    "@angular/forms": "~9.1.6",
+    "@angular/localize": "~9.1.6",
+    "@angular/material": "^9.2.4",
+    "@angular/platform-browser": "~9.1.6",
+    "@angular/platform-browser-dynamic": "~9.1.6",
+    "@angular/router": "~9.1.6",
+    "@briebug/jest-schematic": "^2.1.1",
+    "@fortawesome/fontawesome-free": "^5.13.0",
+    "@ng-bootstrap/ng-bootstrap": "^6.0.0",
+    "@ngrx/effects": "^9.1.2",
+    "@ngrx/router-store": "^9.1.2",
+    "@ngrx/store": "^9.1.2",
+    "@ngx-translate/core": "^12.1.2",
+    "@ngx-translate/http-loader": "^4.0.0",
+    "@storybook/addon-storyshots": "^5.3.18",
+    "angular-notifier": "^6.0.1",
+    "animate-sass": "^0.8.2",
+    "bootstrap": "^4.5.0",
+    "jasmine-marbles": "^0.6.0",
+    "jquery": "^3.5.1",
+    "jwt-decode": "^2.2.0",
+    "material-design-iconic-font": "^2.2.0",
+    "ngx-perfect-scrollbar": "^9.0.0",
+    "pe7-icon": "^1.0.4",
+    "rxjs": "~6.5.4",
+    "sonarqube-scanner": "^2.6.0",
+    "tslib": "^1.10.0",
+    "zone.js": "~0.10.2"
+  },
+  "devDependencies": {
+    "@angular-devkit/build-angular": "^0.901.7",
+    "@angular-devkit/build-ng-packagr": "~0.901.6",
+    "@angular/cli": "~9.1.5",
+    "@angular/compiler-cli": "~9.1.6",
+    "@babel/core": "^7.9.6",
+    "@commitlint/cli": "^8.3.5",
+    "@commitlint/config-conventional": "^8.3.4",
+    "@ngrx/store-devtools": "^9.1.2",
+    "@storybook/addon-actions": "^5.3.18",
+    "@storybook/addon-links": "^5.3.18",
+    "@storybook/addon-notes": "^5.3.18",
+    "@storybook/addons": "^5.3.18",
+    "@storybook/angular": "^5.3.18",
+    "@types/jasmine": "~3.5.0",
+    "@types/jasminewd2": "~2.0.3",
+    "@types/jest": "^25.2.2",
+    "@types/node": "^12.11.1",
+    "@typescript-eslint/eslint-plugin": "^2.34.0",
+    "@typescript-eslint/parser": "^2.34.0",
+    "babel-loader": "^8.1.0",
+    "codelyzer": "^5.1.2",
+    "eslint": "^7.0.0",
+    "eslint-config-prettier": "^6.11.0",
+    "eslint-plugin-prettier": "^3.1.3",
+    "husky": "^4.2.5",
+    "jasmine-core": "~3.5.0",
+    "jasmine-spec-reporter": "~4.2.1",
+    "jest": "^24.9.0",
+    "jest-preset-angular": "^7.1.1",
+    "jest-sonar-reporter": "^2.0.0",
+    "lint-staged": "^10.2.4",
+    "ng-packagr": "^9.0.0",
+    "prettier": "^2.0.5",
+    "protractor": "~5.4.3",
+    "ts-jest": "^26.0.0",
+    "ts-node": "~8.3.0",
+    "tslint": "~6.1.0",
+    "typescript": "~3.8.3"
+  },
+  "jestSonar": {
+    "reportPath": "reports",
+    "reportFile": "test-reporter.xml",
+    "indent": 4
+  }
 }
