--- a/projects/product/tsconfig.lib.json
+++ b/projects/product/tsconfig.lib.json
@@ -5,7 +5,10 @@
         "target": "es2015",
         "declaration": true,
         "inlineSources": true,
-        "types": [],
+        "include": [
+            "../..node_modules/jquery/dist/jquery.min.js",
+            "../..src/assets/scripts/dash-main.js"
+        ],
         "lib": ["dom", "es2018"]
     },
     "angularCompilerOptions": {
